using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace PV_Car_App
{
    class Car
    {
        public string Carcode { get; set; }
        public string Carmanufacturer { get; set; }
        public string Carname { get; set; }
        public string Rangeofcar { get; set; }
        public string Carcolor { get; set; }
        public string Additionalinformationaboutthecar { get; set; }
        public string Numberofcars { get; set; }
        public string Carimportdate { get; set; }
        public string Carprice { get; set; }
    }
}
