using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace PV_Car_App
{
    class Report
    {
        public string Reportcode { get; set; }
        public string Reportname { get; set; }
        public string Dayreport { get; set; }
        public string Carimportprice { get; set; }
        public string Revenue { get; set; }
        public string Salaryemployee { get; set; }
        public string Totalmoney { get; set; }
    }
}
