using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace PV_Car_App
{
    class User
    {
        public string Customerscode { get; set; }
        public string Fullnameofcustomer { get; set; }
        public string Userphonenumber { get; set; }
        public string Useraddress { get; set; }
        public string Useremail { get; set; }
        public string Thepriceofthecarpurchased { get; set; }
    }
}
